--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
                 <img src="images/main-camera.png" alt="" class="heading-image">
             </div>
         </section>
+        <hr class="shade">
+        <section class="companies">
+            <div class="company"><img src="logos/Alibaba.svg" alt=""></div>
+            <div class="company"><img src="logos/Amazon.svg" alt=""></div>
+            <div class="company"><img src="logos/Daraz.pk Logo.svg" alt=""></div>
+            <div class="company"><img src="logos/Ebay.svg" alt=""></div>
+            <div class="company"><img src="logos/Rakuten.svg" alt=""></div>
+            <div class="company"><img src="logos/Target.svg" alt=""></div>
+            <div class="company"><img src="logos/Walmart.svg" alt=""></div>
+        </section>
+        <hr class="shade">
+        <section class="products">
+            <h2 class="products-title">Popular Products</h2>
+        </section>
     </main>
 </body>
 </html>
