Popular Collection Added

--- a/index.html
+++ b/index.html
@@ -40,8 +40,175 @@
             <div class="company"><img src="logos/Walmart.svg" alt=""></div>
         </section>
         <hr class="shade">
-        <section class="products">
-            <h2 class="products-title">Popular Products</h2>
+        <section class="collection">
+            <h2 class="collection-title">Popular Collection</h2>
+            <div class="products">
+                <div class="product">
+                    <div class="product-image">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Flex Tripod</h3>
+                        <p class="product-price">$50.48</p>
+                        <div class="product-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            5.00
+                        </div>
+                        <p class="product-text">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-image">
+                        <img src="images/mic.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Microphone</h3>
+                        <p class="product-price">$120.25</p>
+                        <div class="product-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            4.6
+                        </div>
+                        <p class="product-text">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-image">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Airbuds</h3>
+                        <p class="product-price">$100.00</p>
+                        <div class="product-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            4.8
+                        </div>
+                        <p class="product-text">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-image">
+                        <img src="images/drone.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Drone</h3>
+                        <p class="product-price">$980.48</p>
+                        <div class="product-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            4.7
+                        </div>
+                        <p class="product-text">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-image">
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Light Setup</h3>
+                        <p class="product-price">$1200.00</p>
+                        <div class="product-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            5.00
+                        </div>
+                        <p class="product-text">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-image">
+                        <img src="images/setup.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Photoshoot set</h3>
+                        <p class="product-price">$820.48</p>
+                        <div class="product-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            4.6
+                        </div>
+                        <p class="product-text">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-image">
+                        <img src="images/camera.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Vlogging Cemera</h3>
+                        <p class="product-price">$1800.80</p>
+                        <div class="product-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            5.00
+                        </div>
+                        <p class="product-text">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-image">
+                        <img src="images/single-light.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Green Screen</h3>
+                        <p class="product-price">$25.48</p>
+                        <div class="product-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            4.6
+                        </div>
+                        <p class="product-text">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-image">
+                        <img src="images/action.png" alt="">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="product-name">Action Cemera</h3>
+                        <p class="product-price">$380.00</p>
+                        <div class="product-rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            5.00
+                        </div>
+                        <p class="product-text">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="unique">
+            
         </section>
     </main>
 </body>
