Individual Unique Section added

--- a/index.html
+++ b/index.html
@@ -206,9 +206,19 @@
                     </div>
                 </div>
             </div>
+            <div class="button-more">
+                <a href="#"">See more <i class="fas fa-long-arrow-alt-right"></i></a>
+            </div>
         </section>
         <section class="unique">
-            
+            <div class="unique-left">
+                <img src="images/tech.png" alt="">
+            </div>
+            <div class="unique-right">
+                <h3 class="tech-title">Technology</h3>
+                <p class="tech-text">This is end-to-end influencer marketing platform, Waves, is an end-to-end campaign management platform that provides brands and agencies with a clear understanding of their ROI through real-time campaign insights, dynamic creator tracking, approval functionality, Including data transparency and proof of success.</p>
+                <a class="btn join-btn" href="http://" target="_blank" rel="noopener noreferrer">Join now <i class="fas fa-long-arrow-alt-right"></i></a>
+            </div> 
         </section>
     </main>
 </body>
