--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <div class="company"><img src="logos/Walmart.svg" alt=""></div>
         </section>
         <hr class="shade">
+        <!-- Popular Collection section -->
         <section class="collection">
             <h2 class="collection-title">Popular Collection</h2>
             <div class="products">
@@ -210,6 +211,7 @@
                 <a href="#"">See more <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
         </section>
+        <!-- Unique Section -->
         <section class="unique">
             <div class="unique-left">
                 <img src="images/tech.png" alt="">
@@ -220,6 +222,20 @@
                 <a class="btn join-btn" href="http://" target="_blank" rel="noopener noreferrer">Join now <i class="fas fa-long-arrow-alt-right"></i></a>
             </div> 
         </section>
+        <!-- Footer Section -->
     </main>
+    <footer class="footer">
+        <div class="footer-details">
+            <h3 class="footer-title">Influencer products</h3>
+            <p class="footer-text">Copyright &copy; 2020  influencer products</p>
+            <p class="footer-text-1">All rights reserved</p>
+        </div>
+        <div class="footer-icon">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-youtube"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+        </div>
+    </footer>
 </body>
 </html>
