Navigation bar added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
     <!-- Header start -->
     <header>
         <!-- Navigation bar -->
-
+        <nav>
+            <div class="logo-box">
+                <p>Influencer Products</p>
+            </div>
+            <div class="nav-link">
+                <ul class="navigation"> 
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Sign up</a></li>
+                    <li><a href="">Login</a></li>
+                    <li><a href=""><i class="fas fa-search"></i></a></li>
+                    <li><a href=""><i class="fas fa-shopping-cart"></i></a></i></li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <main>
         <!-- Top Heading styles -->
