--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h1 class="heading-title">Start your Journey as Influencer</h1>
                 <p class="heading-text">You can become and Influencer by working with brands you love.Once you have thousands of followers under your belt, you can start reaching out to brands.</p>
                 <br>
-                <a class="btn prebook-btn" href="http://" target="_blank" rel="noopener noreferrer">Prebook now <i class="fas fa-long-arrow-alt-right"></i></a>
+                <a class="btn prebook-btn" href="#" target="_blank" rel="noopener noreferrer">Prebook now <i class="fas fa-long-arrow-alt-right"></i></a>
             </div>
             <div class="heading-right">
                 <img src="images/main-camera.png" alt="" class="heading-image">
